src/test/examples/custom/valid/dynamicVariables/PairWithVar.wacc
# Assigns dynamic pair to correct type

# Exit 0

begin
	var i = 1;
	var j = 2;
	var x = newpair(i, j);
	int y = fst x
end